[tool.poetry]
name = "sneakpeek"
version = "0.1.0"
description = ""
authors = ["Dan Yazovsky <daniil.yazovsky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
fastapi-jsonrpc = "^2.4.1"
redis = "^4.5.4"
apscheduler = "^3.10.1"
aiohttp = "^3.8.4"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
fakeredis = "^2.10.3"
black = "^23.3.0"
pytest-lazy-fixture = "^0.6.3"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
